--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles/styles.css" />
+    <!-- <link rel="stylesheet" href="src/styles/styles.css" /> -->
   </head>
   <body>
     <div class="container">
@@ -122,9 +122,9 @@
           </div>
         </div>
         <div class="btn">
-            <button type="button">
-                <p>NOVO AGENDAMENTO</p>
-              </button>
+          <button type="button">
+            <p>NOVO AGENDAMENTO</p>
+          </button>
         </div>
         <div class="app-name-wrapper">
           <div class="app-name-content">
