adding js logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="src/styles/styles.css" /> -->
   </head>
   <body>
     <div class="container">
@@ -27,7 +26,8 @@
             </div>
             <div class="calendar">
               <img src="src/assets/calendar.svg" alt="" />
-              <p>10/01/2025</p>
+              <!-- <p>10/01/2025</p> -->
+              <input type="date" id="date-schedule" />
               <img src="src/assets/arrow-down.svg" alt="" />
             </div>
           </div>
@@ -40,7 +40,7 @@
                 <p>09h-12h</p>
               </div>
               <div class="clients-morning">
-                <div class="item-morning">
+                <!-- <div class="item-morning">
                   <p class="hour">09:00</p>
                   <div class="pet-name-owner-name">
                     <span class="pet-name">Thor </span>
@@ -50,7 +50,7 @@
                   <div class="remove-item">
                     <p>Remover agendamento</p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -61,7 +61,7 @@
                 <p>13h-18h</p>
               </div>
               <div class="clients-morning">
-                <div class="item-morning">
+                <!-- <div class="item-morning">
                   <p class="hour">13:00</p>
                   <div class="pet-name-owner-name">
                     <span class="pet-name">Mel </span>
@@ -95,7 +95,7 @@
                   <div class="remove-item">
                     <p>Remover agendamento</p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -106,7 +106,7 @@
                 <p>19h-21h</p>
               </div>
               <div class="clients-morning">
-                <div class="item-morning">
+                <!-- <div class="item-morning">
                   <p class="hour">20:00</p>
                   <div class="pet-name-owner-name">
                     <span class="pet-name">Max </span>
@@ -116,7 +116,7 @@
                   <div class="remove-item">
                     <p>Remover agendamento</p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
